fix(osSlider): Fix positioning over a map
Fix positioning so that it overlays the map only when visible, and doesn't create an un-clickable box over the map when not visible

--- a/src/components/slider/slider.styl
+++ b/src/components/slider/slider.styl
@@ -1,13 +1,17 @@
-.os-slider
-  width 427px
-  max-width 427px
+os-slider
+  display block
   position absolute
-  top 0
-  left -364px
-  transition all 0.45s cubic-bezier(0.35, 0, 0.25, 1)
+  z-index 2
+  margin-left -364px
+  //transform translate3d(-100%,0,0)
+  transition transform 0.45s cubic-bezier(0.35, 0, 0.25, 1)
 
   &.os-slider-opened
-    left 0
+    transform translate3d(100%,0,0)
+
+.os-slider
+  width 364px
+  max-width 364px
 
 .os-slider-content
   background-color #f5f5f5
@@ -19,6 +23,11 @@
   height 64px
   background-color #f5f5f5
   text-align: center
+  position absolute
+  margin-right -100%
+
+  &:hover
+    cursor pointer
 
   a
     display block
@@ -30,11 +39,14 @@
 os-slider-item
   display block
   box-sizing border-box
-  border-left 5px solid #e65100
+  border-left 5px solid currentColor
   padding 22px 32px 22px 35px
+  cursor pointer
 
   &.os-slider-item--active
     background-color #eeeeee
+  &:focus
+    outline none
 
 //  #d40058
 
